Upgrade to Java 10: using a version of the embedded mongo plugin which plays nicely with Java 10